<resources>
    <string name="app_name">FBChatBox</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lblSignIn">Sign-In</string>
    <string name="btnSignIn">SignIn</string>
    <string name="lblSignUp">Sign-Up</string>
    <string name="btnSignUp">SignUp</string>
    <string name="newUSer">New User ? Sign-Up</string>
    <string name="existingUser">Already User? Sign-In</string>
    <string name="username">Username</string>
</resources>
